[add] Render to HTML

--- a/test/source/demo/example.mdx
+++ b/test/source/demo/example.mdx
@@ -1,12 +1,10 @@
 +++
-layout = "example"
+layout = "article"
 title = "example"
 +++
 
 ## Example
 
 ```javascript
-<Example title="1">
-    example
-</Example>
+<Example title="1">example</Example>
 ```
