--- a/test/source/test.mdx
+++ b/test/source/test.mdx
@@ -1,12 +1,10 @@
 ---
-layout: test
+layout: article
 title: test
 ---
 
-import Test from 'test';
+import { Example } from '../widget';
 
 ## Test
 
-<Test title="1">
-    test
-</Test>
+<Example title="1">test</Example>
