[optimize] support Hyphen-case Route paths [optimize] upgrade Upstream packages [optimize] replace Travis CI with GitHub Actions [add] GitHub Sponsor configuration

--- a/test/source/test.mdx
+++ b/test/source/test.mdx
@@ -2,13 +2,15 @@
 layout: article
 title: test
 authors:
-  - TechQuery
+    - TechQuery
 tags:
-  - test
+    - test
 ---
 
 import { Example } from '../widget';
 
 ## Test
 
-<Example title="1">test</Example>
+<Example id={`example-${Date.now()}`} title="1">
+    test
+</Example>
